--- a/app/src/main/res/layout/fragment_alta.xml
+++ b/app/src/main/res/layout/fragment_alta.xml
@@ -11,6 +11,47 @@
         android:layout_height="match_parent"
         android:text="@string/alta"
         android:textSize="24sp"
-        android:gravity="center"/>
+        android:gravity="center_horizontal"/>
+
+    <LinearLayout
+        android:layout_width="365dp"
+        android:layout_height="692dp"
+        android:layout_gravity="center_horizontal|bottom"
+        android:orientation="vertical">
+
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/textView2"
+                    android:layout_width="246dp"
+                    android:layout_height="36dp"
+                    android:layout_weight="1"
+                    android:textAlignment="center"
+                    android:gravity="center"
+                    android:textSize="22sp"
+                    android:text="@string/categoria" />
+
+                <Spinner
+                    android:id="@+id/spinerCategorias"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:textAlignment="textStart"
+
+                    android:spinnerMode="dropdown"
+                    android:layout_weight="1" />
+            </LinearLayout>
+        </ScrollView>
+
+
+    </LinearLayout>
+
 
 </FrameLayout>
