--- a/app/src/main/res/layout/fragment_alta.xml
+++ b/app/src/main/res/layout/fragment_alta.xml
@@ -5,19 +5,13 @@
     android:layout_height="match_parent"
     tools:context=".Alta">
 
-    <!-- TODO: Update blank fragment layout -->
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginVertical="20dp"
-        android:layout_gravity="center_horizontal|bottom"
-        android:orientation="vertical">
-
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginVertical="20dp"
+            android:layout_gravity="center_horizontal|bottom"
+            android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -43,10 +37,11 @@
                     android:textSize="22sp" />
 
                 <EditText
-                    android:id="@+id/editTextNumber2"
+                    android:id="@+id/editTextID"
                     android:layout_width="match_parent"
-                    android:layout_height="35dp"
+                    android:layout_height="50dp"
                     android:layout_weight="1"
+                    android:layout_marginTop="1dp"
                     android:ems="10"
                     android:inputType="number"
                     android:textSize="22sp" />
@@ -61,12 +56,11 @@
                     android:textAlignment="textStart"
                     android:textSize="22sp" />
 
-
                 <EditText
                     android:id="@+id/editTextNombre"
                     android:layout_width="match_parent"
-                    android:layout_height="35dp"
-                    android:layout_marginTop="5dp"
+                    android:layout_height="50dp"
+                    android:layout_marginTop="1dp"
                     android:layout_weight="1"
                     android:ems="10"
                     android:inputType="text"
@@ -86,9 +80,9 @@
                 <EditText
                     android:id="@+id/editTextNStock"
                     android:layout_width="match_parent"
-                    android:layout_height="35dp"
-                    android:layout_marginTop="5dp"
+                    android:layout_height="50dp"
                     android:layout_weight="1"
+                    android:layout_marginTop="1dp"
                     android:ems="10"
                     android:inputType="number"
                     android:textSize="22sp" />
@@ -106,14 +100,14 @@
                 <Spinner
                     android:id="@+id/spinerCategorias"
                     android:layout_width="match_parent"
-                    android:layout_height="40dp"
-                    android:layout_marginTop="5dp"
+                    android:layout_height="50dp"
+                    android:layout_marginTop="1dp"
                     android:layout_weight="1"
                     android:spinnerMode="dropdown"
                     android:textAlignment="textStart" />
 
                 <Button
-                    android:id="@+id/button"
+                    android:id="@+id/bAgregar"
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -123,9 +117,5 @@
                     android:text="@string/agregar" />
             </LinearLayout>
         </ScrollView>
-
-
-    </LinearLayout>
-
 
 </FrameLayout>
