--- a/app/src/main/res/layout/fragment_alta.xml
+++ b/app/src/main/res/layout/fragment_alta.xml
@@ -78,7 +78,7 @@
 
 
                 <EditText
-                    android:id="@+id/editTextNStock"
+                    android:id="@+id/editTextStock"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:layout_weight="1"
