--- a/app/src/main/res/layout/fragment_modificar.xml
+++ b/app/src/main/res/layout/fragment_modificar.xml
@@ -55,6 +55,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="right"
                     android:gravity="right"
+                    android:onClick="buscarPorId"
                     android:text="@string/buscar" />
 
             </LinearLayout>
@@ -93,7 +94,7 @@
 
 
         <EditText
-            android:id="@+id/editTextNStock"
+            android:id="@+id/editTextStock"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginTop="1dp"
