--- a/app/src/main/res/layout/fragment_modificar.xml
+++ b/app/src/main/res/layout/fragment_modificar.xml
@@ -55,7 +55,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="right"
                     android:gravity="right"
-                    android:onClick="buscarPorId"
+                    android:onClick="onClick"
                     android:text="@string/buscar" />
 
             </LinearLayout>
