--- a/app/src/main/res/layout/fragment_modificar.xml
+++ b/app/src/main/res/layout/fragment_modificar.xml
@@ -3,134 +3,171 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
     tools:context=".Modificar">
 
     <!-- TODO: Update blank fragment layout -->
-
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-
+        android:layout_height="match_parent">
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_gravity="center_horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="15dp"
             android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="horizontal">
+                android:layout_gravity="center_horizontal"
+                android:layout_marginVertical="10dp"
+                android:layout_marginHorizontal="20dp"
+                android:padding="10dp"
+                android:background="#D3D3D3"
+                android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/textViewIDM"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="center_horizontal"
-                    android:text="@string/idAlta" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
 
-                <EditText
-                    android:id="@+id/editTextIDM"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:ems="10"
-                    android:inputType="number" />
+                    <TextView
+                        android:id="@+id/textViewIDM"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center_horizontal"
+                        android:layout_marginHorizontal="10dp"
+                        android:textSize="20sp"
+                        android:text="@string/idAlta" />
+
+                    <EditText
+                        android:id="@+id/editTextIDM"
+                        android:layout_width="match_parent"
+                        android:layout_height="35dp"
+                        android:ems="10"
+                        android:textSize="20sp"
+                        android:backgroundTint="@color/white"
+                        android:background="@color/white"
+                        android:inputType="number" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+
+                    <Space
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1" />
+
+                    <Button
+                        android:id="@+id/btnBuscar"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="end"
+                        android:gravity="center"
+                        android:backgroundTint="#64ABF1"
+                        android:text="@string/buscar" />
+
+                </LinearLayout>
 
             </LinearLayout>
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="horizontal">
-
-                <Space
+                <TextView
+                    android:id="@+id/IDTitulo"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1" />
+                    android:gravity="center_horizontal"
+                    android:layout_marginTop="40dp"
+                    android:layout_marginEnd="10dp"
+                    android:textSize="30sp"
+                    android:text="@string/idAlta" />
 
-                <Button
-                    android:id="@+id/btnBuscar"
+                <TextView
+                    android:id="@+id/IDBuscado"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="right"
-                    android:gravity="right"
-                    android:onClick="onClick"
-                    android:text="@string/buscar" />
+                    android:layout_marginTop="40dp"
+                    android:gravity="center_horizontal"
+                    android:text="@string/idBuscado"
+                    android:textSize="30sp" />
 
             </LinearLayout>
+            <TextView
+                android:id="@+id/textViewNombre"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_marginTop="10dp"
+                android:layout_weight="1"
+                android:text="@string/nombre_prod"
+                android:textAlignment="textStart"
+                android:textSize="22sp" />
+
+            <EditText
+                android:id="@+id/editTextNombre"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginTop="1dp"
+                android:layout_weight="1"
+                android:ems="10"
+                android:inputType="text"
+                android:textSize="22sp" />
+
+            <TextView
+                android:id="@+id/textViewStock"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_marginTop="10dp"
+                android:layout_weight="1"
+                android:text="@string/stock"
+                android:textAlignment="textStart"
+                android:textSize="22sp" />
+
+
+            <EditText
+                android:id="@+id/editTextStock"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginTop="1dp"
+                android:layout_weight="1"
+                android:ems="10"
+                android:inputType="number"
+                android:textSize="22sp" />
+
+            <TextView
+                android:id="@+id/textViewCate"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_marginTop="5dp"
+                android:layout_weight="1"
+                android:text="@string/categoria"
+                android:textAlignment="textStart"
+                android:textSize="22sp" />
+
+            <Spinner
+                android:id="@+id/spinerCategorias"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginTop="1dp"
+                android:layout_weight="1"
+                android:spinnerMode="dropdown"
+                android:textAlignment="textStart" />
+
+            <Button
+                android:id="@+id/btnModificar"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="15dp"
+                android:layout_weight="1"
+                android:backgroundTint="#64ABF1"
+                android:text="@string/modificar" />
 
         </LinearLayout>
-
-        <TextView
-            android:id="@+id/textViewNombre"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_marginTop="10dp"
-            android:layout_weight="1"
-            android:text="@string/nombre_prod"
-            android:textAlignment="textStart"
-            android:textSize="22sp" />
-
-        <EditText
-            android:id="@+id/editTextNombre"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginTop="1dp"
-            android:layout_weight="1"
-            android:ems="10"
-            android:inputType="text"
-            android:textSize="22sp" />
-
-        <TextView
-            android:id="@+id/textViewStock"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_marginTop="10dp"
-            android:layout_weight="1"
-            android:text="@string/stock"
-            android:textAlignment="textStart"
-            android:textSize="22sp" />
-
-
-        <EditText
-            android:id="@+id/editTextStock"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginTop="1dp"
-            android:layout_weight="1"
-            android:ems="10"
-            android:inputType="number"
-            android:textSize="22sp" />
-
-        <TextView
-            android:id="@+id/textViewCate"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_marginTop="5dp"
-            android:layout_weight="1"
-            android:text="@string/categoria"
-            android:textAlignment="textStart"
-            android:textSize="22sp" />
-
-        <Spinner
-            android:id="@+id/spinerCategorias"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginTop="1dp"
-            android:layout_weight="1"
-            android:spinnerMode="dropdown"
-            android:textAlignment="textStart" />
-
-        <Button
-            android:id="@+id/btnModificar"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="15dp"
-            android:layout_weight="1"
-            android:backgroundTint="#64ABF1"
-            android:text="@string/modificar" />
-    </LinearLayout>
-
+    </ScrollView>
 </FrameLayout>
